# QML-ChessPlayerAnalyze

./: .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp
data/players/: anynoname.json  blaine-carroll.json
docs/: metricas-de-analisis.md
docs/plans/: 2026-03-01-debug-cli-design.md  2026-03-01-debug-cli-implementation.md
python/: cli.py  database.py  requirements.txt  storage.py
python/analysis/: __init__.py  analysis_config.py  basic_metrics.py  difficulty.py  engine.py  human_impossibility.py  opening_book.py  phase_analysis.py  psychological.py  suspicion.py  temporal_windows.py  time_analysis.py  toggle_detection.py
python/repositories/: __init__.py  aggregate_repository.py  analysis_repository.py  game_repository.py  job_repository.py
python/services/: __init__.py  aggregation_service.py  analysis_service.py  game_fetcher_service.py
python/services/calculators/: __init__.py  advanced_metrics.py  base.py  basic_stats.py  difficulty_metrics.py  historical.py  phase_1b_metrics.py  phase_metrics.py  precision_metrics.py  psychological.py  registry.py  temporal_windows_calculator.py  time_metrics.py
python/tools/: __init__.py  __main__.py  analyzers.py  debug_cli.py  formatters.py
python/utils/: __init__.py  chesscom_stats.py  datetime_utils.py  json_parser.py  logging_utils.py  pgn_utils.py  stat_utils.py  validators.py
qml/: AnalysisOptionsDialog.qml  DonutChart.qml  LineChart.qml  Main.qml  MetricCard.qml  PlayerCard.qml  RadarChart.qml  ResultView.qml  ScaleBar.qml  SearchView.qml  SectionGroup.qml  SignalsList.qml  SimpleBarChart.qml  Theme.qml
src/: AnalysisController.cpp  AnalysisController.h  Settings.cpp  Settings.h
(+5 files in other folders)
